@@ -38,12 +38,12 @@ using MonoDevelop.Projects.Formats.MSBuild;
 
 namespace CSharpBinding
 {
-	class CSharpResourceIdBuilder : IResourceHandler
+	class CSharpResourceIdBuilder : MSBuildResourceHandler
 	{
-		public string GetDefaultResourceId (ProjectFile pf)
+		public override string GetDefaultResourceId (ProjectFile pf)
 		{
 			if (String.IsNullOrEmpty (pf.DependsOn) || !File.Exists (pf.DependsOn))
-				return MSBuildProjectService.GetDefaultResourceId (pf);
+				return base.GetDefaultResourceId (pf);
 
 			string ns = null;
 			string classname = null;
@@ -80,7 +80,7 @@ namespace CSharpBinding
 				}
 
 				if (classname == null)
-					return MSBuildProjectService.GetDefaultResourceId (pf);
+					return base.GetDefaultResourceId (pf);
 
 				string culture, extn, only_filename;
 				if (MSBuildProjectService.TrySplitResourceName (pf.RelativePath, out only_filename, out culture, out extn))
