@@ -1,3 +1,7 @@
+2009-02-02  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Project/CSharpResourceIdBuilder.cs: Track api changes.
+
 2009-01-30  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* CSharpBinding.mdp:
